# orogen-avalonControl

./: AvalonControl.hpp  CMakeLists.txt  avalonControl.orogen  avalon_control.orogen  manifest.xml
tasks/: CMakeLists.txt  FakeWriter.cpp  FakeWriter.hpp  MotionControlTask.cpp  MotionControlTask.hpp  MotionFeedbackTask.cpp  MotionFeedbackTask.hpp  PIDSettingsUpdate.hpp  PositionControlTask.cpp  PositionControlTask.hpp  RelFakeWriter.cpp  RelFakeWriter.hpp  SpeedControlTask.cpp  SpeedControlTask.hpp  TrajectoryFollower.cpp  TrajectoryFollower.hpp  pidcontroller.cpp  pidcontroller.h
